# syspy

./: .gitignore  README.md  benchmark.py  index.md  main  main.py  mkdocs.yml  pyproject.toml  test_basic.py
.github/workflows/: pages.yml  test.yml
auction_platform/: main.py
auction_platform/auctions/: base_auction.py  dutch_auction.py  english_auction.py  first_price_sealed_bid.py  second_price_sealed_bid.py
auction_platform/models/: bid.py  item.py  user.py
auction_platform/tests/: test_auctions.py
